[package]
name = "servedir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
rusqlite = "0.35.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version= "0.6.2", features = ["fs"] }
tower-livereload = "0.9.6"
walkdir = "2.5.0"
